# audio_clipper

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  audio_clipper.py  repositories.bzl  requirements.txt
src/: audio_clipper.cpp  audio_clipper.h  audio_editor.cpp  audio_editor.h  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  main.cpp
